[package]
name = "nysm"
version = "0.1.1"
edition = "2021"
description = "Manage secrets from Secrets Providers."
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/nysm"
documentation = "https://docs.rs/nysm"
homepage = "https://github.com/Endoze/nysm"
rust-version = "1.70.0"

[lib]
name = "nysm"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "0.56"
aws-sdk-secretsmanager = "0.34"
aws-types = "0.56"
bat = "0.24"
clap = { version = "4.4", features = ["derive"]}
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
tabled = "0.14"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
lazy_static = { version = "1.4.0" }
futures = "0.3.28"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
