[package]
name = "nysm"
version = "0.1.2"
edition = "2024"
description = "Manage secrets from Secrets Providers."
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/nysm"
documentation = "https://docs.rs/nysm"
homepage = "https://github.com/Endoze/nysm"
rust-version = "1.87.0"

[lib]
name = "nysm"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "1.6.1"
aws-sdk-secretsmanager = "1.74.0"
aws-types = "1.3.7"
bat = "0.25"
clap = { version = "4.4", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tabled = "0.19"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
lazy_static = { version = "1.4.0" }
futures = "0.3.28"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
